--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,7 @@ God`
                 letterText.scrollTop = letterText.scrollHeight;
                 setTimeout(() => typeWriter(text, i + 1), Math.random() * 50 + 30);
             } else {
-                // Typing finished! 10 second countdown to show finale
+                // Typing finished! 10 second  to show finale
                 setTimeout(showFinale, 10000);
             }
         }
